LPD-35795 Add reflection compatibility to source formatter